[gd_scene load_steps=2 format=3 uid="uid://bvq8j3r4p5m2n"]

[ext_resource type="Script" path="res://src/ui/SaveLoadSlotUI.gd" id="1"]

[node name="SaveLoadSlotUI" type="PanelContainer"]
custom_minimum_size = Vector2(600, 120)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SlotButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SlotNameLabel" type="Label" parent="MarginContainer/VBoxContainer/SlotButton/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Empty Slot 1"
horizontal_alignment = 1

[node name="LevelMoneyLabel" type="Label" parent="MarginContainer/VBoxContainer/SlotButton/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Level 1 | $500.00 | Rep: 100%"
horizontal_alignment = 1

[node name="TimestampLabel" type="Label" parent="MarginContainer/VBoxContainer/SlotButton/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Saved: Oct 28, 14:35"
horizontal_alignment = 1

[node name="PlaytimeLabel" type="Label" parent="MarginContainer/VBoxContainer/SlotButton/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Playtime: 2h 15m"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RenameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Rename"

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Delete"
